[tool.poetry]
name = "python-template"
version = "0.0.1"
description = ""
authors = ["mozkzki"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
folium = "^0.12.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
lxml = "^4.6.3"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
flake8 = "3.9.1"
mypy = "0.900"
pytest = "6.2.0"
black = "21.7b0"
pytest-cov = "2.12.1"
coverage = "5.5"
isort = "5.9.3"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
